k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beleganski-jaas
  labels:
    app: beleganski-jaas
    app.kubernetes.io/name: beleganski-jaas   # ADD
    version: jacuzzi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: beleganski-jaas        # leave unchanged (immutable)
  template:
    metadata:
      labels:
        app: beleganski-jaas
        app.kubernetes.io/name: beleganski-jaas   # ADD - this is what Homepage looks for
        version: jacuzzi
    spec:
      containers:
        - name: beleganski-jaas
          image: dporkov/beleganski-jaas:57dfef510e5227af360a42285c6dae79bb8d4ed9
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "50m"
