k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beleganski-jaas
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Alexander Beleganski"
    gethomepage.dev/description: "Open source human (JaaS)"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/icon: "mdi-account-tie"
    gethomepage.dev/href: "https://alex-jaas.dporkov.tech"
spec:
  ingressClassName: traefik
  rules:
    - host: alex-jaas.dporkov.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beleganski-jaas
                port:
                  number: 80
